@@ -44,6 +44,7 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
  * Support `formfield_callback` handling on `ModelForm.Meta` for future Django 4.2 release (Matt Westcott)
  * Ensure that `ModelAdmin` correctly supports filters in combination with subsequent searches without clearing the applied filters (Stefan Hammer)
  * Add missing translated values to site settings' headers and models presented in listings (Stefan Hammer)
+ * Remove `capitalize()` calls to avoid issues with other languages or incorrectly presented model names for reporting and parts of site settings (Stefan hammer)
 
 ## Upgrade considerations
 
